--- a/templates/class/layout4.html
+++ b/templates/class/layout4.html
@@ -7,6 +7,7 @@
     <title>Harvard</title>
     <link rel="stylesheet" href="{% static 'harvard/css/layout4.css' %}">
     <link rel="stylesheet" href="{% static 'harvard/css/layout4.css' %}">
+    <link href="http://cs50.harvard.edu/x/favicon.ico?1753839056" rel="icon">
     <script src="{% static 'prvard/js/main.js' %}"></script>
     {% block head %}{% endblock %}
 </head>
