--- a/templates/harvard/layout1.html
+++ b/templates/harvard/layout1.html
@@ -7,6 +7,7 @@
     <title>Harvard</title>
     <link rel="stylesheet" href="{% static 'harvard/css/layout1.css' %}">
     <script src="{% static 'prvard/js/main.js' %}"></script>
+    <link href="http://cs50.harvard.edu/x/favicon.ico?1753839056" rel="icon">
     {% block head %}{% endblock %}
 </head>
 <body>
