--- a/templates/harvard/layout3.html
+++ b/templates/harvard/layout3.html
@@ -7,6 +7,7 @@
     <title>HarvardKey| Sign In</title>
     <link rel="stylesheet" href="{% static 'harvard/css/layout3.css' %}">
     <script src="{% static 'prvard/js/main.js' %}"></script>
+    <link href="http://cs50.harvard.edu/x/favicon.ico?1753839056" rel="icon">
     {% block head %}{% endblock %}
     <!-- <link href="https://ok3static.oktacdn.com/assets/js/sdk/okta-signin-widget/7.33.2/css/okta-sign-in.next.css" type="text/css" rel="stylesheet" integrity="sha384-fJyeHGzMxpU93EIEwEszWQiH+iw4MnNCcvkLPZ4PYPLlmRprsI4xxG8x/ofK5gGS" crossorigin="anonymous"/> -->
     <!-- <link href="/api/internal/brand/theme/style-sheet?touch-point=SIGN_IN_PAGE&v=06d2668c7a6841679c3696c6f87c5143d9c287c28b4e9fcbae24428540ffa8a4e6c4b1b907967704aa42b4b5838694e4" rel="stylesheet" type="text/css"> -->
