--- a/templates/harvard/index.html
+++ b/templates/harvard/index.html
@@ -7,7 +7,7 @@
     <title>Harvard</title>
     <link rel="stylesheet" href="{% static 'harvard/css/index.css' %}">
     <script src="{% static 'prvard/js/main.js' %}"></script>
-    <link href="http://cs50.harvard.edu/x/favicon.ico?1753839056" rel="icon">
+    <link href="{% static 'harvard/img/harvard.png' %}" rel="icon">
 </head>
 <body>
     
