--- a/templates/class/login.html
+++ b/templates/class/login.html
@@ -8,6 +8,7 @@ Create Class
 {% endblock %}
 {% block id %}{{ university.Prvard_id }}{% endblock %}
 {% block img %}{{ student.Photo.url }}{% endblock %}
+{% block head %}<link rel="shortcut icon" href="https://ok3static.oktacdn.com/bc/image/fileStoreRecord?id=fs01rj8w1c7r2CEe21d8" type="image/x-icon"/>{% endblock %}
 {% block body %}
 <style>
     .all{
