--- a/templates/class/layout4.html
+++ b/templates/class/layout4.html
@@ -7,7 +7,6 @@
     <title>Harvard</title>
     <link rel="stylesheet" href="{% static 'harvard/css/layout4.css' %}">
     <link rel="stylesheet" href="{% static 'harvard/css/layout4.css' %}">
-    <link href="http://cs50.harvard.edu/x/favicon.ico?1753839056" rel="icon">
     <script src="{% static 'prvard/js/main.js' %}"></script>
     {% block head %}{% endblock %}
 </head>
@@ -40,8 +39,9 @@
             <a href="{% url 'main:Opclass' class.id %}" class="{% if is_t == '1' %}in_t{% endif %}">Class</a>
             <a href="{% url 'main:Mclass' class.id %}" class="{% if is_t == '2'%}in_t{% endif %}">Members</a>
             <a href="{% url 'main:Cclass' class.id %}" class="{% if is_t == '3'%}in_t{% endif %}">Chat</a>
-            <a href="https://cs50.dev" class="{% if is_t == '4'%}in_t{% endif %}">Code Space</a>
-            <a href="https://github.com" class="{% if is_t == '5'%}in_t{% endif %}">Github</a>
+            <a href="{% url 'main:ai' class.id %}" class="{% if is_t == '4'%}in_t{% endif %}">Prroer AI</a>
+            <a href="https://cs50.dev" class="{% if is_t == '5'%}in_t{% endif %}">Code Space</a>
+            <a href="https://github.com" class="{% if is_t == '76'%}in_t{% endif %}">Github</a>
         </div>
         <div class="body">{% block body %}{% endblock %}</div>
     </div>
